<?xml version="1.0"?>
<package format="2">
  <name>etq_lidar</name>
  <version>1.0.0</version>
  <description>The ETQ Lidar package</description>

  <maintainer email="jboylan@fsu.edu">Jonathan Tyler Boylan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>grid_map_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>grid_map_filters</build_depend>
  <build_depend>grid_map_cv</build_depend>

  <build_export_depend>grid_map_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>filters</build_export_depend>
  <build_export_depend>grid_map_filters</build_export_depend>
  <build_export_depend>grid_map_cv</build_export_depend>

  <exec_depend>grid_map_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>filters</exec_depend>
  <exec_depend>grid_map_filters</exec_depend>
  <exec_depend>grid_map_cv</exec_depend>


  <export>

  </export>
</package>
