<?xml version="1.0"?>
<package format="2">
  <name>etq_planner</name>
  <version>1.0.0</version>
  <description>ETQ Global Planner package</description>

  <maintainer email="jboylan@fsu.edu">Jonathan T. Boylan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>grid_map_ros</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>grid_map_ros</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>


  <export>
    
  </export>
</package>
